objects/geopointe__GP_Default_Mapping__c.object
<CustomObject>
    <description>Global Business &amp; People Layers is no longer a part of Geopointe.</description>
    <fields>
        <fullName>geopointe__Geopointe_Object_Mapping__c</fullName>
        <label>Geopointe Object Mapping</label>
        <referenceTo>geopointe__GP_Object_Mapping__c</referenceTo>
        <relationshipLabel>Geopointe Default Mappings</relationshipLabel>
        <relationshipName>Geopointe_Default_Mappings</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>geopointe__Order__c</fullName>
        <label>Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>geopointe__Sfdc_Field__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Sfdc Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>geopointe__Value__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Geopointe Default Mapping</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Geopointe Default Mapping Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Geopointe Default Mappings</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>